# sovereign-contract-account

./: Beaker.toml  README.md
contracts/contract-account/: Cargo.toml  README.md
contracts/contract-account/src/: contract.rs  lib.rs  msg.rs  proto.rs  state.rs
contracts/contract-account/tests/: helpers.rs  integration_test.rs
ts/sdk/: README.md  package.json  typedoc.json
